feat: Add SEO meta tags and update header image handling
Enhances the application's discoverability and user experience by adding comprehensive meta tags for SEO and social sharing. Also, removes the fallback image logic from the header component as the local asset is now reliably available.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Primary Meta Tags -->
+    <title>4,000 Weeks Life Grid</title>
+    <meta name="title" content="4,000 Weeks Life Grid" />
+    <meta name="description" content="Visualize your life in weeks. Enter your Date of Birth and instantly see a grid of your life: past weeks filled, current week highlighted, and future weeks faded." />
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.4000-weeks.com/" />
+    <meta property="og:title" content="4,000 Weeks Life Grid" />
+    <meta property="og:description" content="Visualize your life in weeks. Reckon with time and focus on what matters. Based on the philosophy of Oliver Burkeman." />
+    <meta property="og:image" content="https://www.4000-weeks.com/book-cover.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.4000-weeks.com/" />
+    <meta property="twitter:title" content="4,000 Weeks Life Grid" />
+    <meta property="twitter:description" content="Visualize your life in weeks. Reckon with time and focus on what matters. Based on the philosophy of Oliver Burkeman." />
+    <meta property="twitter:image" content="https://www.4000-weeks.com/book-cover.jpg" />
+
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#4f46e5" />
-    <title>4,000 Weeks Life Grid</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoVBL5gI9kLmbG4dFVSRi9r43EKDjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script type="importmap">
